--- a/Index-fusi-ultra.html
+++ b/Index-fusi-ultra.html
@@ -4,7 +4,7 @@
   <title>Dual.Infodose v7.9 · KOBLLUX VISIO</title>
 
   <meta name="theme-color" content="#050811">
-  <link rel="manifest" href="./manifest.webmanifest">
+  <link rel="manifest" href="./manifest.json">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&amp;family=JetBrains+Mono:wght@400;700&amp;display=swap">
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
@@ -3979,13 +3979,13 @@ if(window.__RENDERBUS__?.on){
   </script><script src="https://kodux78k.github.io/oiDual-0i/0RB-0S17.js"></script>
 <div class="wrap">
   <div class="content">
-    <iframe id="frame" src="./index.html" title="Dual Infodose frame"></iframe>
+    <iframe id="frame" src="https://kodux78k.github.io/oiDual-idHome/index.html" title="Dual Infodose frame"></iframe>
   </div>
 
   <div class="symbol-bar" aria-hidden="">
     <button class="symbol-button" data-url="about:blank">Φ</button>
     <button class="symbol-button" data-url="https://kodux78k.github.io/oiDual-Vivivi-1/">꩜</button>
-    <button class="symbol-button" data-url="https://kodux78k.github.io/oiDual-KxT/">◌</button>
+    <button class="symbol-button" data-url="https://kodux78k.github.io/oiDual-idHome/index.html/">◌</button>
     <button class="symbol-button" data-url="https://kodux78k.github.io/Unouno-/index.html">☼</button>
     <button class="symbol-button" data-url="https://kodux78k.github.io/NoSolarDual/index.html">◑</button>
     <button class="symbol-button" data-url="https://kodux78k.github.io/info-Doc/index.html">◘</button>
@@ -4010,7 +4010,7 @@ if(window.__RENDERBUS__?.on){
     <div id="pulsos"></div>
   </div>
 
-  <p class="footer">Do seu jeito. <strong>Sempre</strong> único. <strong>Sempre</strong> seu.</p>
+  <!-- <p class="footer">Do seu jeito. <strong>Sempre</strong> único. <strong>Sempre</strong> seu.</p>-->
 </div>
 
 <!-- lightweight web component modal for remote/local pages -->
