Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -66,12 +66,8 @@ html,body{height:100%;margin:0;font-family:var(--font-ui),system-ui,-apple-syste
 /* subtle grid background */
 body{
   min-height:100vh;
-  overflow:hidden;
-  background-image:
-    linear-gradient(rgba(255,255,255,0.02) 1px, transparent 1px),
-    linear-gradient(90deg, rgba(255,255,255,0.02) 1px, transparent 1px);
-  background-size:52px 52px;
-  background-position:center;
+  overflow:auto;
+  
 }
 
 /* ========== NEW REACTIVE ANIMATIONS ========== */
@@ -531,7 +527,7 @@ iframe#frame{width:100%;height:100%;border:0;transition:opacity .4s;opacity:1}
 
     /* Input Dock */
     .input-dock { position: fixed; bottom: 0; left: 0; right: 0; padding: 16px; background: linear-gradient(to top, var(--bg-deep) 30%, transparent); z-index: 30; display: flex; flex-direction: column; align-items: center; }
-    body.mode-day .input-dock { background: linear-gradient(to top, rgba(255,255,255,0.6) 18%, transparent); }
+    body.mode-day .input-dock { background: linear-gradient(to top, rgba(255,255,255,0.3) 18%, transparent); }
     #filePreview { display: none; width: 100%; max-width: 400px; background: rgba(0,0,0,0.8); border: 1px solid var(--primary); border-radius: 12px; padding: 10px; margin-bottom: 10px; align-items: center; justify-content: space-between; backdrop-filter: blur(10px); }
     #filePreview.active { display: flex; animation: slideIn 0.3s; }
     .file-info { font-size: 0.8rem; color: #fff; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; max-width: 200px; }
