Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -3842,7 +3842,7 @@ if(window.__RENDERBUS__?.on){
 </script>
 <div class="wrap">
   <div class="content">
-    <iframe id="frame" src="https://kodux78k.github.io/oiDual-idHome/index.html" title="Dual Infodose frame"></iframe>
+    <iframe id="frame" src="about:blank" title="Dual Infodose frame"></iframe>
   </div>
 
   <div class="symbol-bar" aria-hidden="">
