--- a/HuD-New-di.html
+++ b/HuD-New-di.html
@@ -41,7 +41,7 @@
 <body>
 <div class="wrap">
   <div class="content">
-    <iframe id="frame" src="https://kodux78k.github.io/oiDual-idHome/index.html" title="Dual Infodose frame"></iframe>
+    <iframe id="frame" src="about:blank" title="Dual Infodose frame"></iframe>
   </div>
 
   <div class="symbol-bar" aria-hidden>
