--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@ iframe#frame{width:100%;height:100%;border:0;transition:opacity .4s;opacity:1}
     .footer-dot{ width:8px; height:8px; border-radius:50%; background:var(--secondary); animation:pulse 2s infinite; }
     @keyframes pulse{50%{opacity:.4; box-shadow: 0 0 10px currentColor;}}
     .input-row { display: flex; width: 100%; gap: 10px; align-items: center; max-width: 800px; }
-    .glass-input { flex: 1; background: rgba(255,255,255,0.1); backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.2); color: inherit; padding: 14px 20px; border-radius: 99px; outline: none; transition: 0.3s; }
+    .glass-input { flex: 1;max-width:178px; background: rgba(255,255,255,0.1); backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.2); color: inherit; padding: 14px 20px; border-radius: 99px; outline: none; transition: 0.3s; }
     .glass-input:focus { background: rgba(0,0,0,0.5); border-color: var(--primary); box-shadow: 0 0 15px rgba(0,245,255,0.2); }
     body.mode-day .glass-input:focus { background: white; }
     .btn-icon { width: 44px; height: 44px; border-radius: 50%; border: 1px solid rgba(255,255,255,0.1); background: rgba(255,255,255,0.05); color: inherit; display: flex; align-items: center; justify-content: center; cursor: pointer; transition: 0.2s; backdrop-filter: blur(5px); }
